# redstart

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  conformance-storediff.yml  pages.yml  publish-crates.yml  publish-vscode.yml  release.yml
conformance/: README.md  docker-compose.yml  run.sh  store-diff.mjs
conformance/fixtures/arb-erc20/: redstart.toml
conformance/fixtures/arb-erc20/ref-build/: package-lock.json  package.json  schema.graphql  subgraph.yaml
conformance/fixtures/arb-erc20/ref-build/abis/: ERC20.json
conformance/fixtures/arb-erc20/src/: main.red
conformance/reference/erc20/: mappings.ts
crates/redstart-checker/: Cargo.toml
crates/redstart-checker/src/: abi.rs  diag.rs  explain.rs  lib.rs  tests.rs  ty.rs
crates/redstart-cli/: Cargo.toml
crates/redstart-cli/src/: main.rs
crates/redstart-codegen/: Cargo.toml
crates/redstart-codegen/src/: abi.rs  lib.rs  lower.rs  manifest.rs  mappings.rs  schema.rs
crates/redstart-codegen/tests/: snapshots.rs
crates/redstart-codegen/tests/snapshots/: snapshots__erc20__mappings_ts.snap  snapshots__erc20__schema_graphql.snap  snapshots__erc20__subgraph_yaml.snap  snapshots__factory__mappings_ts.snap  snapshots__factory__schema_graphql.snap  snapshots__factory__subgraph_yaml.snap  snapshots__file-metadata__mappings_ts.snap  snapshots__file-metadata__schema_graphql.snap  snapshots__file-metadata__subgraph_yaml.snap  snapshots__horizon-indexer__mappings_ts.snap  snapshots__horizon-indexer__schema_graphql.snap  snapshots__horizon-indexer__subgraph_yaml.snap
crates/redstart-loader/: Cargo.toml
crates/redstart-loader/src/: error.rs  lib.rs  manifest.rs  tree.rs
crates/redstart-lsp/: Cargo.toml
crates/redstart-lsp/src/: lib.rs
crates/redstart-mcp/: Cargo.toml
crates/redstart-mcp/src/: lib.rs
crates/redstart-parser/: Cargo.toml
crates/redstart-parser/src/: ast.rs  error.rs  fmt.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/redstart-test/: Cargo.toml
crates/redstart-test/src/: lib.rs  tests.rs  value.rs
crates/redstart-wasm/: Cargo.toml
crates/redstart-wasm/src/: lib.rs
docs/: ROADMAP-2026.md  lessons-from-graphite.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  contributing.md  eject-path.md  installation.md  introduction.md  mcp.md  quick-start.md  safety.md
docs/book/src/tour/: contract-calls.md  entities.md  handlers.md  modules.md  nullability.md  sources.md  testing.md
docs/presentation/: redstart-intro.html  speaker-notes.md
editors/vscode/: README.md  extension.js  package-lock.json  package.json  redstart.tmLanguage.json
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/redstart/: config.toml  highlights.scm
editors/zed/src/: lib.rs
examples/erc20/: redstart.toml
examples/erc20/src/: accounts.red  main.red
examples/erc20/src/abis/: ERC20.json
examples/factory/: redstart.toml
examples/factory/src/: main.red
examples/factory/src/abis/: Factory.json  Pool.json
examples/file-metadata/: redstart.toml
examples/file-metadata/src/: main.red
examples/file-metadata/src/abis/: ERC721.json
examples/horizon-indexer/: README.md  redstart.toml
examples/horizon-indexer/src/: delegation.red  helpers.red  main.red  schema.red  staking.red  subgraph_service.red  tests.red
examples/horizon-indexer/src/abis/: HorizonStaking.json  StakingExtension.json  SubgraphService.json
packaging/homebrew/: README.md  redstart.rb.tmpl
playground/: app.js  build.sh  index.html  style.css
rfcs/: 0000-template.md  0001-unified-source-of-truth.md  README.md
scripts/: install.sh
services/redstart-mcp/: Dockerfile  README.md  package.json  server.mjs  test-client.mjs
services/subgraph-verifier/: Dockerfile  README.md  package.json  server.mjs
services/subgraph-verifier/base/: package.json
services/subgraph-verifier/warmup/: schema.graphql  subgraph.yaml
services/subgraph-verifier/warmup/abis/: Token.json
services/subgraph-verifier/warmup/src/: mapping.ts
services/subgraph-verifier/warmup/tests/: transfer.test.ts  utils.ts
tree-sitter-redstart/: README.md  grammar.js  package.json
tree-sitter-redstart/queries/: highlights.scm
tree-sitter-redstart/src/: grammar.json  node-types.json  parser.c
web/: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
web/app/: apple-icon.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/api/contract/: route.ts
web/app/api/github/callback/: route.ts
web/app/api/verify/: route.ts
web/app/api/version/: route.ts
web/app/generator/: page.tsx
web/app/playground/: page.tsx
web/components/: code.tsx  constellation.tsx  cosmos.tsx  file-tabs.tsx  footer.tsx  generator.tsx  logo.tsx  nav.tsx  playground.tsx  reveal.tsx  version-watcher.tsx
web/lib/: chains.ts  generate.ts  github.ts  highlight.ts  project.ts  samples.ts  subgraph-abi.ts
web/public/wasm/: redstart_wasm.js  redstart_wasm_bg.wasm
web/scripts/harness/: .gitignore  README.md  corpus.ts  run.ts
web/scripts/harness/base/: package.json
