[workspace]
members = [
    "crates/redstart-parser",
    "crates/redstart-loader",
    "crates/redstart-checker",
    "crates/redstart-codegen",
    "crates/redstart-test",
    "crates/redstart-lsp",
    "crates/redstart-cli",
    "crates/redstart-wasm",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lodestar-team/redstart"
authors = ["The Lodestar Team"]

[workspace.dependencies]
redstart-parser = { path = "crates/redstart-parser", version = "0.2.0" }
redstart-loader = { path = "crates/redstart-loader", version = "0.2.0" }
redstart-checker = { path = "crates/redstart-checker", version = "0.2.0" }
redstart-codegen = { path = "crates/redstart-codegen", version = "0.2.0" }
redstart-test = { path = "crates/redstart-test", version = "0.2.0" }
redstart-lsp = { path = "crates/redstart-lsp", version = "0.2.0" }
logos = "0.14"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
insta = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
