[package]
name = "redstart-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analysis and type checking for Redstart"

[dependencies]
redstart-parser.workspace = true
redstart-loader.workspace = true
serde_json.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
