[package]
name = "redstart-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generates schema.graphql, subgraph.yaml, and AssemblyScript mappings from Redstart"

[dependencies]
redstart-parser.workspace = true
redstart-loader.workspace = true
redstart-checker.workspace = true

[dev-dependencies]
tempfile = "3"
insta.workspace = true

[lints]
workspace = true
