[package]
name = "redstart-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Project manifest and multi-file module loader for Redstart"

[dependencies]
redstart-parser.workspace = true
serde.workspace = true
toml.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
