[package]
name = "redstart-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language server for Redstart (diagnostics, formatting, symbols, hover, completion)"

[dependencies]
redstart-parser.workspace = true
redstart-loader.workspace = true
redstart-checker.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }

[lints]
workspace = true
