[package]
name = "redstart-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server for Redstart (check/explain/build/test as agent tools)"

[dependencies]
redstart-loader.workspace = true
redstart-checker.workspace = true
redstart-codegen.workspace = true
redstart-test.workspace = true
serde_json.workspace = true

[lints]
workspace = true
