[package]
name = "redstart-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the Redstart compiler — powers the browser playground"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redstart-loader.workspace = true
redstart-checker.workspace = true
redstart-codegen.workspace = true
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

# NOTE: this crate deliberately does NOT inherit `[lints] workspace = true`:
# the workspace forbids unsafe_code, but wasm-bindgen's generated glue needs it.
